try2: changes for responsiveness

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </script>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.4">
     <link rel="stylesheet" href="css/skins/color-4.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
@@ -99,7 +99,7 @@
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="css/style-switcher.css">
     <link rel="stylesheet" href="css/lazy-skeleton.css">
-    <link rel="stylesheet" href="css/opensource.css">
+    <link rel="stylesheet" href="css/opensource.css?v=1.1">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="images/Logo.svg">
