--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://rishabhsingh.me/">
-    <meta name="twitter:title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <meta name="twitter:title" content="Rishabh Singh - Data Scientist | AI Engineer | IIT Madras">
     <meta name="twitter:description"
         content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
     <meta name="twitter:image" content="https://rishabhsingh.me/images/me.png">
