--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Primary Meta Tags -->
-    <title>Rishabh Singh - Data Scientist | ML Engineer | IIT Madras</title>
-    <meta name="title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <title>Rishabh Singh - Data Scientist | AI Engineer | IIT Madras</title>
+    <meta name="title" content="Rishabh Singh - Data Scientist | AI Engineer | IIT Madras">
     <meta name="description"
         content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
     <meta name="keywords"
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rishabhsingh.me/">
-    <meta property="og:title" content="Rishabh Singh - Data Scientist | ML Engineer | IIT Madras">
+    <meta property="og:title" content="Rishabh Singh - Data Scientist | AI Engineer | IIT Madras">
     <meta property="og:description"
         content="IIT Madras Data Scientist specializing in ML, system design & full-stack development. Building AI solutions, Flask apps & scalable architectures.">
     <meta property="og:image" content="https://rishabhsingh.me/images/me.png">
