--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
                             </h3>
                             <!-- <h3 class="my-profession">I'm a <span class="typing">Back-end Developer</span></h3> -->
                             <br>
-                            <p>As an student of IIT Madras with a Bachelor of Science in Data Science and Applications,
-                                my journey has been a blend of academic rigor and practical expertise. At iNeuron.ai,
-                                our team developed a machine learning model that predicts domain authenticity,
-                                bolstering cybersecurity defenses.
-
-                                My core competencies lie in Python, Git, and Machine Learning. Motivated by challenges
-                                and driven by data, I aim to contribute to innovative solutions in the field of data
-                                science.!<br><br>
-                                Let's make some magic together !
+                            <p>Full-stack Data Scientist with hands-on experience delivering end-to-end analytics
+                                solutions — from data wrangling and modeling to building dashboards, APIs, and
+                                deployable prototypes. Worked on forecasting, mixed-effects sizing, MMM, and time-series
+                                pipelines with stakeholder-ready insight delivery.
+                                <br>
+                                Strong in Python, SQL, Streamlit, Flask, Figma, and cloud exposure (Azure/AWS), with
+                                experience mentoring junior analysts and collaborating across Forecasting, PACE, and I&A
+                                teams.!<br><br>
+                                <b>Let's make some magic together !</b>
                             </p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
@@ -183,14 +183,14 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Rishabh Singh <span>Data Scientist</span></h3>
-                                    <p>As an student of IIT Madras with a Bachelor of Science in Data Science and
-                                        Applications, my journey has been a blend of academic rigor and practical
-                                        expertise. At iNeuron.ai, our team developed a machine learning model that
-                                        predicts domain authenticity, bolstering cybersecurity defenses.
-
-                                        My core competencies lie in Python, Git, and Machine Learning. Motivated by
-                                        challenges and driven by data, I aim to contribute to innovative solutions in
-                                        the field of data science.
+                                    <p>Full-stack Data Scientist with hands-on experience delivering end-to-end
+                                        analytics solutions — from data wrangling and modeling to building dashboards,
+                                        APIs, and deployable prototypes. Worked on forecasting, mixed-effects sizing,
+                                        MMM, and time-series pipelines with stakeholder-ready insight delivery.
+                                        <br>
+                                        Strong in Python, SQL, Streamlit, Flask, Figma, and cloud exposure (Azure/AWS),
+                                        with experience mentoring junior analysts and collaborating across Forecasting,
+                                        PACE, and I&A teams.
                                     </p>
                                 </div>
                             </div>
