--- a/index.html
+++ b/index.html
@@ -344,8 +344,14 @@
                                                     <ul class="timeline-text">
                                                         <li>📌 Machine Learning and AWS</li>
                                                         <li>📌 Insight-Driven Analysis</li>
-                                                        <li>📌 Strategic Impact</li>
+                                                        <li>📌 Product Development</li>
                                                         <li>📌 APLD Data Expertise</li>
+                                                        <li style="color: white;">🔗
+                                                            <a style="color: white !important;"
+                                                                href="https://www.linkedin.com/posts/rishabh-data-scientist_certificate-activity-7392448621314658305-_Qvd?utm_source=share&utm_medium=member_desktop&rcm=ACoAADjSymkBQD2fUi_0L5vVimxPW6vJmLTDKEE">
+                                                                Mentorship: DS & MLOps
+                                                            </a>
+                                                        </li>
                                                     </ul>
                                                     </p>
                                                 </div>
