removed map my visitor link

--- a/sections/visitors.html
+++ b/sections/visitors.html
@@ -17,8 +17,8 @@
                         across the globe</p>
                 </div>
                 <div class="map-tracker">
-                    <a href="https://mapmyvisitors.com/web/1c0tu" title="Visit tracker" target="_blank"
-                        rel="noopener noreferrer" aria-label="Open visitors map in a new tab">
+                    <a href="#" title="Visit tracker" target="_blank" rel="noopener noreferrer"
+                        aria-label="Open visitors map in a new tab">
                         <img src="https://mapmyvisitors.com/map.png?cl=0e1633&w=900&t=n&d=RoZbRwr1002BRTY6exFofc0AvldqsSEiznlvac9R0qY&co=0b4975&ct=cdd4d9"
                             alt="Visit tracker map showing global visitor locations" loading="lazy" decoding="async">
                     </a>
