--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </h3>
                             <!-- <h3 class="my-profession">I'm a <span class="typing">Back-end Developer</span></h3> -->
                             <br>
-                            <p>Full-stack Data Scientist with hands-on experience delivering end-to-end analytics
+                            <p> Data Scientist with hands-on experience delivering end-to-end analytics
                                 solutions — from data wrangling and modeling to building dashboards, APIs, and
                                 deployable prototypes. Worked on forecasting, mixed-effects sizing, MMM, and time-series
                                 pipelines with stakeholder-ready insight delivery.
@@ -183,7 +183,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Rishabh Singh <span>Data Scientist</span></h3>
-                                    <p>Full-stack Data Scientist with hands-on experience delivering end-to-end
+                                    <p> Data Scientist with hands-on experience delivering end-to-end
                                         analytics solutions — from data wrangling and modeling to building dashboards,
                                         APIs, and deployable prototypes. Worked on forecasting, mixed-effects sizing,
                                         MMM, and time-series pipelines with stakeholder-ready insight delivery.
